@@ -115,12 +115,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-   *) mod_http2: disable and give warning when prefork is configured. h2 will no longer
-                 participate in protocol negotiation, server will continue to work.
-     trunk patch: http://svn.apache.org/r1800689
-     2.4.x patch:  svn merge -c 1800689 ^/httpd/httpd/trunk .
-     +1: icing, ylavic, jim
-
    *)  htpasswd / htdigest: Do not apply the strict permissions of the temporary
        passwd file to a possibly existing passwd file. PR 61240.
      trunk patch: http://svn.apache.org/r1800594
